# AQM-Eval

./: .pre-commit-config.yaml  Dockerfile  README-data-sync.md  README.md  environment-dev.yml  environment.yml  pre-commit.py  pyproject.toml
.github/workflows/: docker-build-test.yml  docker-precommit.yml
aqm-data-sync/: README.md  environment.yml  pre-commit.py
aqm-data-sync/src/aqm_data_sync/: aqm_data_sync_cli.py  core.py  logging_aqm_data_sync.py
aqm-data-sync/src/test/: test_aqm_data_sync.py  test_core.py
docs/: config.schema.json
spike/: calc-met.py
spike/ufs-srw/: config.canopy-eval.yaml
spike/ufs-srw/aqm-verify/: JSRW_AQM_VERIFY  README.md  aqm_verify.yaml
src/aqm_data_sync/: aqm_data_sync_cli.py  core.py  logging_aqm_data_sync.py
src/aqm_eval/: __init__.py  base.py  logging_aqm_eval.py  settings.py  shared.py
src/aqm_eval/aqm_data_sync/: aqm_data_sync_cli.py  core.py
src/aqm_eval/aqm_mm_eval/: aqm_mm_eval_cli.py  aqs_pm_conv_base.sh  monet_AirNow_driver.py  monet_yaml_generator.py  namelist.aqs.pm.yaml  namelist.chem.yaml  namelist.ish.yaml  namelist_chem_model.py  run_monet.sh
src/aqm_eval/aqm_mm_eval/driver/: helpers.py  interface.py  model.py  package.py  runner.py
src/aqm_eval/aqm_mm_eval/spike/: aqs_pm_conv_eval.sh  ish_conv_eval.sh  run_monet.aqs.pm.sh
src/aqm_eval/aqm_mm_eval/yaml_template/: mm_analysis.j2  mm_model_defns.j2  mm_obs.j2  namelist.chem.j2  template_aqs_pm_base.j2  template_aqs_pm_eval.j2  template_boxplot.j2  template_csi  template_csi.j2  template_csi_rename_false_alarm_rate  (+19 more)
src/aqm_eval/data_sync/: core.py  data_sync_cli.py
src/aqm_eval/mm_eval/: mm_eval_cli.py  stats_concat.py
src/aqm_eval/verify/: context.py  runner.py  verify_cli.py
src/test/: conftest.py  shared.py  test_aqm_data_sync.py  test_core.py  test_settings.py  test_shared.py
src/test/test_aqm_data_sync/: test_aqm_data_sync_cli.py  test_core.py
src/test/test_aqm_mm_eval/: conftest.py  test_aqm_mm_eval_cli.py
src/test/test_data_sync/: test_core.py  test_data_sync_cli.py
src/test/test_mm_eval/: conftest.py  test_mm_eval_cli.py  test_stats_concat.py
src/test/test_verify/: conftest.py  test_runner.py  test_verify_cli.py
(+63 files in other folders)
