[project]
name = "aqm-eval"
version = "0.0.1"
description = "UFS-AQM Evaluation and Verification utilities and scripts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ben Koziol", email = "benjamin.koziol@noaa.gov" }
]

[project.scripts]
aqm-data-sync = "aqm_eval.aqm_data_sync.aqm_data_sync_cli:app"
