[project]
name = "aqm-eval"
version = "0.0.1"
description = "UFS-AQM Evaluation and Verification utilities and scripts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ben Koziol", email = "benjamin.koziol@noaa.gov" }
]

[project.scripts]
aqm-data-sync = "aqm_eval.aqm_data_sync.aqm_data_sync_cli:app"
aqm-mm-eval = "aqm_eval.aqm_mm_eval.aqm_mm_eval_cli:app"

[tool.ruff]
line-length = 132

[tool.ruff.lint]
#select = ["E", "F", "I", "D"]  #tdk:last: re-enable "D" which checks for docstrings
select = ["E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"test_*.py" = ["D"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
disable_error_code = ["prop-decorator"]
