[project]
name = "aqm-eval"
version = "0.0.1"
description = "UFS-AQM Evaluation and Verification utilities and scripts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Ben Koziol", email = "benjamin.koziol@noaa.gov" }
]

[project.scripts]
aqm-data-sync = "aqm_eval.data_sync.data_sync_cli:app"
aqm-mm-eval = "aqm_eval.mm_eval.mm_eval_cli:app"
aqm-verify = "aqm_eval.verify.verify_cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"aqm_eval.mm_eval" = ["mm_eval_config/**/*"]

[tool.ruff]
line-length = 132

[tool.ruff.lint]
#select = ["E", "F", "I", "D"] TODO: Turn on doc checks when doc strategy determined
select = ["E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"test_*.py" = ["D"]
"conftest.py" = ["D"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
disable_error_code = ["prop-decorator"]
